--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.6/plyr.css" type="text/css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.9.0/slick/slick.css" type="text/css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" type="text/css"/>
     <link rel="stylesheet" href="css/main.min.css?pwacss=<%= timestamp %>" type="text/css">
     <!--CSS-->
 </head>
@@ -56,7 +56,9 @@
 
     <section>
         <div class="container wrap user-podcast__wrap js-podcast-list">
-
+            <!-- <div id="main">
+                <span class="spinner"></span>  
+            </div> -->
         </div>
     </section>
 
@@ -116,7 +118,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.6/plyr.min.js" type="text/javascript"></script>
-    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.9.0/slick/slick.min.js" type="text/javascript"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" type="text/javascript"></script>
     <script src="js/main.min.js?pwajs=<%= timestamp %>" type="text/javascript"></script>
     <!--JavaScript-->
 
