--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1017,3 +1017,43 @@ body{
     50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
 }
 /* bubble_out animation */
+
+#main {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.spinner {
+    position: relative;
+    font-size: 64px;
+}
+.spinner:before, .spinner:after {
+    content: "";
+    position: relative;
+    display: block;
+}
+.spinner:before {
+    animation: spinner 2.5s cubic-bezier(0.75, 0, 0.5, 1) infinite normal;
+    width: 1em;
+    height: 1em;
+    background-color: #fff;
+}
+  
+@keyframes spinner {
+    50% {
+        border-radius: 50%;
+        transform: scale(0.5) rotate(360deg);
+    }
+    100% {
+        transform: scale(1) rotate(720deg);
+    }
+}
+@keyframes shadow {
+    50% {
+        transform: scale(0.5);
+        background-color: rgba(0,0,0,0.1);
+    }
+}
